<resources>
    <string name="app_name">Calculator Vault</string>
    <string name="ENGLISH" translatable="false">English</string>
    <string name="JAPANESE" translatable="false">日本</string>
    <string name="KOREAN" translatable="false">"한국인 </string>
    <string name="FRENCH" translatable="false">Français</string>
    <string name="ITALIA" translatable="false">Italia</string>
    <string name="GERMAN" translatable="false">Deutsch</string>
    <string name="VIETNAM" translatable="false">Tiếng Việt</string>
    <string name="INDONESIA" translatable="false">Indonesia</string>
    <string name="BRAZIL" translatable="false">Brazil</string>
    <string name="TURKEY" translatable="false">Türkiye</string>
    <string name="SPAIN" translatable="false">España</string>
    <string name="INDIA" translatable="false">भारत</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Calculator</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="custom">Custom</string>
    <string name="cancel">Cancel</string>
    <string name="custom_ok">Ok</string>
    <string name="back">Back</string>
    <string name="vault">Vault</string>
    <string name="pictures">Pictures</string>
    <string name="picture_lower">picture</string>
    <string name="picture">Picture</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="documents">Documents</string>
    <string name="list">List</string>
    <string name="sort">Sort</string>
    <string name="delete">Delete</string>
    <string name="delete_instruction">Are you sure to delete %s ?</string>
    <string name="yes">Yes</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_instruction">Are you sure to unlock the selected %s ?</string>
    <string name="new_folder">New Folder</string>
    <string name="enter_name">Enter album\'s name</string>
    <string name="item">item</string>
    <string name="grid">Grid</string>
    <string name="invalid_folder_name">Invalid folder\'s name</string>
    <string name="rename">Rename</string>
    <string name="delete_success">Delete success!</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="delete_success_condition">Delete success %s files!</string>
    <string name="delete_failed_condition">Delete failed %s files!</string>
    <string name="create_success">Create success!</string>
    <string name="create_failed">Create failed</string>
    <string name="invalid_expression">Invalid expression</string>
    <string name="browser">Browser</string>
    <string name="note">Note</string>
    <string name="this_note">this note</string>
    <string name="note_lower">Note</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="drawer_text">Calculator - Hide photos</string>
    <string name="move_to_vault">Move to Vault</string>
    <string name="files">Files</string>
    <string name="pdf">PDF</string>
    <string name="ppt">PPT</string>
    <string name="word">Word</string>
    <string name="excel">Excel</string>
    <string name="text">Text</string>
    <string name="csv">CSV</string>
    <string name="zip">ZIP</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="random">Random</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="library">Library</string>
    <string name="audios_album">Audios album</string>
    <string name="lock_ask_1">Where are you from ?</string>
    <string name="question">Question :</string>
    <string name="answer">Answer :</string>
    <string name="instruction_setup_lock">Security questions allow you to reset your password if you forget it in the future. Please choose a question that is easy for you to remember. Once the answer is forgotten, the encrypted data may be lost.</string>
    <string name="hint_lock_instruction">Enter your answer with no more than 50 letters</string>
    <string name="lock_ask_2">What is your favorite number?</string>
    <string name="lock_ask_3">What is your favorite color?</string>
    <string name="lock_ask_4">What do you do in your free time?</string>
    <string name="important_tip">Important tips</string>
    <string name="tips_instruction">In case you forget your password, simply enter a number ‘11223344’ into Calculator and press ’=’ button, then retrieve your password by entering the answer of your security question.</string>
    <string name="never_show">Never show</string>
    <string name="go_it">Go it</string>
    <string name="allow">Allow</string>
    <string name="permission_title">Calculator - Vault needs file permission, this permission will be used for hidden features: Videos, Pictures, Music, Files...</string>
    <string name="general">General</string>
    <string name="safe">Safe</string>
    <string name="disguise_icon">Disguise Icon</string>
    <string name="private_camera">Private Camera</string>
    <string name="advanced">Advanced</string>
    <string name="retrive_lost_files">Retrieve Lost Files</string>
    <string name="backup">Back up</string>
    <string name="device_migration">Device Migration</string>
    <string name="change_language">Change Language</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="preventing_lost_files_help">Preventing Lost Files Help</string>
    <string name="FAQ">FAQ</string>
    <string name="recycle_bin_instruction">The files in the Recycle Bin will be automatically deleted after 60 days.</string>
    <string name="play">Play</string>
    <string name="info">Info</string>
    <string name="open">Open</string>
    <string name="title">Title :</string>
    <string name="content">Content :</string>
    <string name="new_note">New note</string>
    <string name="title_required">Note\'s title is required!</string>
    <string name="nothing_to_delete">Nothing to delete !</string>
    <string name="lock">Lock</string>
    <string name="password_recovery_question">Password Recovery Question</string>
    <string name="fingerprint_unlock">Fingerprint Unlock</string>
    <string name="fingerprint_lock_display">Fingerprint Lock Display</string>
    <string name="screen_off_action">Screen Off Action</string>
    <string name="lock_when_leaving_app">Lock when leaving app</string>
    <string name="temporary_file_deletion_time">Temporary File Deletion Time</string>
    <string name="unlock_app_with_registered_fingerprint">Unlock app with registered fingerprint</string>
    <string name="unlock_interface_displays_fingerprint_pattern">Unlock interface displays fingerprint pattern</string>
    <string name="content_2_screen_off_action">The status of Sgallery  after screen is locked</string>
    <string name="content_2_lock_when_leaving_app">Re-lock when you press the Back button or the HOME button to leave the app</string>
    <string name="content_2_temporary_file_deletion_time">"Delete the decrypted temporary file,  after the app is locked  "</string>
    <string name="lock_type">Lock Type</string>
    <string name="pattern">Pattern</string>
    <string name="tactile_feedback">Tactile Feedback</string>
    <string name="visible_pattern">Visible Pattern</string>
    <string name="change_unlock">Change Unlock</string>
    <string name="change_unlock_pin">Change Unlock PIN</string>
    <string name="change_unlock_pattern">Change Unlock Pattern</string>
    <string name="PIN">PIN</string>
    <string name="none">None</string>
    <string name="pin">PIN</string>
    <string name="no_action">No Action</string>
    <string name="lock_again">Lock Again</string>
    <string name="go_to_homescreen">Go to Home Screen</string>
    <string name="security_question">Security Question</string>
    <string name="enter_original_password">Enter original password</string>
    <string name="setup_a_new_password">Set up a new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_must_be_4_characters">Password must be 4 characters</string>
    <string name="current_password_is_not_correct">Current password is not correct</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="change_pin_success">Change PIN successfully !</string>
    <string name="draw_a_new_key_pattern">Draw a new key pattern</string>
    <string name="draw_current_key">Draw your currently pattern</string>
    <string name="draw_pattern_again_to_confirm">Draw pattern again to confirm</string>
    <string name="pattern_atleast_4_node">Pattern has atleast 4 node!</string>
    <string name="pattern_not_match">Pattern doesn\'t match!</string>
    <string name="pattern_lock_set_success">Pattern lock is set successfully</string>
    <string name="biometric_for_app">Biometric login for vault!</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="release_your_finger_when_done">Release your finger when done</string>
    <string name="confirm_your_question">Confirm security question</string>
    <string name="enter_security_answer">Enter security answer</string>
    <string name="security_answer_invalid">Security answer is not valid!</string>
    <string name="verify_successfully">Verify successfully</string>
    <string name="your_password_is">Your password is %s</string>
    <string name="search_query">Search</string>
    <string name="google" translatable="false">Google</string>
    <string name="qwant">Qwant</string>
    <string name="search_encrypt">Searchencrypt</string>
    <string name="ducduckgo">DuckDuckGo</string>
    <string name="this_bookmark">this bookmark</string>
    <string name="cancel_upper">CANCEL</string>
    <string name="camera">Camera</string>
    <string name="slide_show">Slideshow</string>
    <string name="share">Share</string>
    <string name="select_no_more_than_one">Select no more than one!</string>
    <string name="tips">Tips</string>
    <string name="launch_method">Launch Methods</string>
    <string name="launch_from_dialer">Launch from Phone Dialer (Galaxy is invalid)</string>
    <string name="launch_from_dialer_first_step">1) Open phone dialer</string>
    <string name="launch_from_dialer_second_step">2) Enter the Launcher Number</string>
    <string name="launch_from_dialer_third_step">3) Press the dial key</string>
    <string name="launcher_number">Launcher number is *#*#0101#*#*</string>
    <string name="launch_by_manage_setting_first_step"><![CDATA[1) > Open Settings]]></string>
    <string name="launch_by_manage_setting_second_step"><![CDATA[2) > Find Apps]]></string>
    <string name="launch_by_manage_setting_third_step"><![CDATA[3) > Find CalculatorVault]]></string>
    <string name="launch_by_manage_setting_fourth_step"><![CDATA[4) > Tap Storage]]></string>
    <string name="launch_by_manage_setting_fifth_step"><![CDATA[5) > Tap Manage Space button]]></string>
    <string name="launch_by_manage_setting">Launch by Manage Space button</string>
    <string name="tips_encryption_content">Encryption: Encrypts all bits of a file and is suitable for small, high-security files.\n\nHidden: Handles only file names and is suitable for large, low-security files.\n\n(We do not recommend that you put too many files in one folder.For more than 1000 files, we recommend that you put them in a different folder.)</string>
    <string name="got_it">Got it</string>
</resources>