<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/container_hide_app_icon"
        layout="@layout/layout_item_custom_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_launch_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/app_font_500"
        android:text="@string/launch_method"
        android:textColor="@color/neutral_06"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_hide_app_icon" />

    <TextView
        android:id="@+id/tv_launch_from_dialer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_from_dialer"
        android:textColor="@color/neutral_06"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_method" />

    <TextView
        android:id="@+id/tv_dialer_first_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_from_dialer_first_step"
        android:textColor="@color/neutral_05"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_from_dialer" />

    <TextView
        android:id="@+id/tv_dialer_second_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_from_dialer_second_step"
        android:textColor="@color/neutral_05"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialer_first_step" />

    <TextView
        android:id="@+id/tv_dialer_third_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_from_dialer_third_step"
        android:textColor="@color/neutral_05"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialer_second_step" />

    <TextView
        android:id="@+id/tv_secret_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launcher_number"
        android:textColor="@color/neutral_05"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialer_third_step" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_line_dash"
        app:layout_constraintTop_toBottomOf="@id/tv_secret_code" />

    <TextView
        android:id="@+id/tv_launch_by_manage_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_by_manage_setting"
        android:textColor="@color/neutral_06"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/tv_launch_by_manage_setting_first_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_by_manage_setting_first_step"
        android:textColor="@color/neutral_05"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_by_manage_setting" />

    <TextView
        android:id="@+id/tv_launch_by_manage_setting_second_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_by_manage_setting_second_step"
        android:textColor="@color/neutral_05"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_by_manage_setting_first_step" />

    <TextView
        android:id="@+id/tv_launch_by_manage_setting_third_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_by_manage_setting_third_step"
        android:textColor="@color/neutral_05"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_by_manage_setting_second_step" />

    <TextView
        android:id="@+id/tv_launch_by_manage_setting_fourth_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_by_manage_setting_fourth_step"
        android:textColor="@color/neutral_05"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_by_manage_setting_third_step" />

    <TextView
        android:id="@+id/tv_launch_by_manage_setting_fifth_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/app_font_400"
        android:text="@string/launch_by_manage_setting_fifth_step"
        android:textColor="@color/neutral_05"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_launch_by_manage_setting_fourth_step" />


</androidx.constraintlayout.widget.ConstraintLayout>